# livecheck

./: .cruft.json  .gitignore  .markdownlint.json  .readthedocs.yaml  .rtfd-requirements.txt  .wiswa.jsonnet  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  FIXING_VERSION_DETECTION.md  LICENSE.txt  README.md  package.json  pyproject.toml  sh.tat.livecheck.yml  snapcraft.yaml
.claude/agents/: click-auditor.md  coverage-improver.md  docstring-fixer.md  mypy-fixer.md  python-expert.md  regen.md  release.md  test-writer.md  wiswa-sync.md
.claude/skills/ci/: SKILL.md
.claude/skills/make-release/: SKILL.md
.github/instructions/: general.instructions.md
.github/workflows/: appimage.yml  flatpak.yml  publish.yml  qa.yml  release.yml  snap.yml  tests.yml
.stubs/: libarchive.pyi
.stubs/xdg/: BaseDirectory.pyi
docs/: badges.rst  conf.py  index.rst  lib.rst
livecheck/: __init__.py  __main__.py  constants.py  dist_github.py  main.py  settings.py  settings_model.py  special_cases.py  typing.py  utils.py
livecheck/special/: __init__.py  bitbucket.py  changelog.py  checksum.py  composer.py  davinci.py  directory.py  dotnet.py  downloaders.py  gist.py  github.py  gitlab.py  golang.py  gomodule.py  handlers.py  ida_free.py  jetbrains.py  maven.py  metacpan.py  nodejs.py  nuget.py  package.py  pecl.py  pypi.py  regex.py  repology.py  rubygems.py  sourceforge.py  sourcehut.py  utils.py  yarn.py
livecheck/utils/: __init__.py  assertions.py  credentials.py  logger.py  misc.py  portage.py  portage_test.py  requests.py  session.py  string.py
man/: livecheck.1
tests/: conftest.py  test_dist_github.py  test_main.py  test_settings.py
tests/special/: test_bitbucket.py  test_changelog.py  test_checksum.py  test_composer.py  test_davinci.py  test_directory.py  test_dotnet.py  test_gist.py  test_github.py  test_gitlab.py  test_golang.py  test_gomodule.py  test_handlers.py  test_ida_free.py  test_jetbrains.py  test_maven.py  test_metacpan.py  test_nodejs.py  test_nuget.py  test_package.py  test_pecl.py  test_pypi.py  test_regex.py  test_repology.py  test_rubygems.py  test_sourceforge.py  test_sourcehut.py  test_utils.py  test_yarn.py
tests/utils/: test_credentials.py  test_misc.py  test_portage.py  test_requests.py  test_session.py  test_string.py
