[tool.poetry]
name = "portage-livecheck"
version = "0.0.8"
authors = ["Andrew Udvare <audvare@gmail.com>"]
description = "Tool to update ebuilds."
license = "MIT"
packages = [{ include = "livecheck" }]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4"
click = ">=8.1.3,<8.1.4 || >8.1.4"
libarchive-c = "^5.0"
loguru = "^0.7.1"
pyxdg = "^0.28"
pyyaml = "^6.0.1"
requests = "^2.31.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
commitizen = "^3.9.0"
mypy = "^1.5.1"
portage = { git = "https://github.com/gentoo/portage.git" }
portage-types = "^0.0.2"
rope = "^1.9.0"
ruff = "^0.1.6"
toml = "^0.10.2"
types-pyyaml = "^6.0.12.11"
types-requests = "^2.31.0.2"
types-toml = "^0.10.8.7"
yapf = "^0.40.1"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
docutils = "^0.20.1"
esbonio = "^0.16.1"
sphinx = "^7.2.5"
sphinx-click = "^5.0.1"
toml = "^0.10.2"

[tool.poetry.group.tests]
optional = true

[tool.poetry.group.tests.dependencies]
coveralls = "^3.3.1"
mock = "^5.1.0"
pytest = "^7.4.1"
pytest-mock = "^3.11.1"
requests-mock = "^1.11.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry.scripts]
livecheck = "livecheck.main:main"

[tool.isort]
case_sensitive = true
combine_as_imports = true
from_first = true
line_length = 100
order_by_type = true
use_parentheses = true

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_untyped_decorators = true
disallow_subclassing_any = true
mypy_path = "./.stubs"
show_column_numbers = true
show_error_codes = true
strict_equality = true
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true

[tool.pytest.ini_options]
mock_use_standalone_module = true

[tool.rstcheck]
ignore_directives = "automodule"

[tool.ruff]
exclude = [".git", ".mypy_cache", ".ruff_cache", "_build", "build", "dist", "node_modules"]
line-length = 100

[tool.yapf]
align_closing_bracket_with_visual_indent = true
allow_multiline_dictionary_keys = false
allow_multiline_lambdas = false
allow_split_before_dict_value = true
blank_line_before_class_docstring = false
blank_line_before_module_docstring = false
blank_line_before_nested_class_or_def = false
blank_lines_around_top_level_definition = 2
coalesce_brackets = true
column_limit = 100
continuation_align_style = "SPACE"
continuation_indent_width = 4
dedent_closing_brackets = false
disable_ending_comma_heuristic = false
each_dict_entry_on_separate_line = true
indent_dictionary_value = true
indent_width = 4
join_multiple_lines = true
no_spaces_around_selected_binary_operators = false
space_between_ending_comma_and_closing_bracket = false
spaces_around_default_or_named_assign = false
spaces_around_power_operator = true
spaces_before_comment = 2
split_all_comma_separated_values = false
split_arguments_when_comma_terminated = false
split_before_bitwise_operator = true
split_before_closing_bracket = true
split_before_dict_set_generator = true
split_before_dot = false
split_before_expression_after_opening_paren = false
split_before_first_argument = false
split_before_logical_operator = true
split_before_named_assigns = true
split_complex_comprehension = false
split_penalty_after_opening_bracket = 30
split_penalty_after_unary_operator = 10000
split_penalty_before_if_expr = 0
split_penalty_bitwise_operator = 300
split_penalty_comprehension = 80
split_penalty_excess_character = 7000
split_penalty_for_added_line_split = 30
split_penalty_import_names = 0
split_penalty_logical_operator = 300
use_tabs = false

[tool.yapfignore]
ignore_patterns = ["node_modules/**"]
